--- a/struts/.settings/org.eclipse.core.resources.prefs
+++ b/struts/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebRoot/ShowWishes.jsp=UTF-8
+encoding//src/com/hibernate/dao/UserDaoImpl.java=UTF-8
 encoding//src/com/struts2/path/action/IndexAction.java=UTF-8
