user login update

--- a/struts/.settings/org.eclipse.core.resources.prefs
+++ b/struts/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,7 @@
 eclipse.preferences.version=1
+encoding//WebRoot/MangeWishes.jsp=UTF-8
+encoding//WebRoot/NewWIshEdit.jsp=UTF-8
+encoding//WebRoot/PickUp.jsp=UTF-8
 encoding//WebRoot/ShowWishes.jsp=UTF-8
 encoding//src/com/hibernate/dao/UserDaoImpl.java=UTF-8
 encoding//src/com/struts2/path/action/IndexAction.java=UTF-8
