--- a/struts/.settings/org.eclipse.core.resources.prefs
+++ b/struts/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,5 @@ encoding//WebRoot/PickUp.jsp=UTF-8
 encoding//WebRoot/ShowWishes.jsp=UTF-8
 encoding//src/com/hibernate/dao/UserDaoImpl.java=UTF-8
 encoding//src/com/struts2/path/action/IndexAction.java=UTF-8
+encoding//src/com/struts2/path/action/NewWishAction.java=UTF-8
+encoding//src/com/struts2/path/action/ShowWishesAction.java=UTF-8
